# az-rbac-watch

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  POLICY_REFERENCE.md  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  docs.yml  publish.yml  test-action.yml
docs/: architecture.md  ci-cd.md  configuration.md  contributing.md  getting-started.md  index.md  policy-reference.md
docs/commands/: audit.md  diff.md  discover.md  scan.md  snapshot.md  validate.md
docs/plans/: 2026-03-07-v020-distribution-roadmap.md  2026-03-07-v020-implementation-plan.md  2026-03-08-v021-full-english-design.md  2026-03-08-v021-full-english-plan.md  2026-03-08-v022-examples-design.md  2026-03-08-v022-examples-plan.md  2026-03-08-v030-orphaned-assignments-design.md  2026-03-08-v030-orphaned-assignments-plan.md  2026-03-08-v040-change-tracking-design.md  2026-03-08-v040-change-tracking-plan.md  2026-03-09-ci-dependabot-design.md  2026-03-09-v050-github-action-design.md  2026-03-09-v050-github-action-plan.md  2026-03-09-v060-enhanced-reports-design.md  2026-03-09-v060-enhanced-reports-plan.md  2026-03-09-v070-diff-html-report-design.md  2026-03-09-v070-diff-html-report-plan.md  2026-03-09-v080-portal-links-design.md  2026-03-09-v080-portal-links-plan.md
examples/: ci_cd_integration.md  compliance_rules.yaml  deny_rules_starter.yaml  enterprise_landing_zone.yaml  policy_model.yaml  small_team.yaml
examples/workflows/: rbac-pr-check.yml  rbac-scheduled-scan.yml  rbac-snapshot-diff.yml
scripts/: install.sh
src/az_rbac_watch/: __init__.py  _version.py  cli.py
tests/: conftest.py  factories.py  test_cli.py  test_cmd_mcp.py  test_compliance.py  test_console_report.py  test_diff.py  test_diff_report.py  test_discovery.py  test_framework_mapper.py  test_html_report.py  test_json_report.py  test_policy_model.py  test_portal_links.py  test_rbac_scanner.py  test_settings.py  test_snapshot.py
tests/mcp/: test_azure_scan.py  test_blast_radius.py  test_categorize.py  test_scan.py  (+5 more)
(+48 files in other folders)
