[project]
name = "az-rbac-watch"
description = "Azure RBAC compliance monitoring — detect permission drift and governance violations"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "maxvanp" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "azure-identity>=1.17.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-managementgroups>=1.0.0",
    "azure-mgmt-subscription>=3.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "hatch-vcs>=0.4",
    "ruff>=0.5.0",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs-material",
    "mkdocs-minify-plugin",
]

[project.urls]
Homepage = "https://github.com/maxvanp/az-rbac-watch"
Repository = "https://github.com/maxvanp/az-rbac-watch"
Issues = "https://github.com/maxvanp/az-rbac-watch/issues"
Changelog = "https://github.com/maxvanp/az-rbac-watch/blob/main/CHANGELOG.md"

[project.scripts]
az-rbac-watch = "az_rbac_watch.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/az_rbac_watch/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/az_rbac_watch"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["src/az_rbac_watch/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "T20", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["arg-type", "list-item", "type-arg", "comparison-overlap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
